fix: make the view title to consider if it's about a new password or a change of existent one

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/EditPasswordView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/EditPasswordView.xaml
@@ -21,7 +21,7 @@
 
         <ContentControl x:Name="Root" />
 
-        <TextBlock Text="{loc:StringResource Key='NewPassword'}"
+        <TextBlock Text="{Binding Title}"
                    Style="{StaticResource HeaderTextBlockStyle}"/>
 
         <ScrollViewer Grid.Row="1">
