fix: remove useless fr-FR culture

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Dialogs/Views/PasswordDetailsDialog.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Dialogs/Views/PasswordDetailsDialog.xaml
@@ -13,7 +13,7 @@
     <Grid MinWidth="400">
         <ScrollViewer>
             <StackPanel Orientation="Vertical">
-                <StackPanel Orientation="Vertical" >
+                <StackPanel Orientation="Vertical">
                     <controls:ValidationTextBox Margin="10,10,-10,10"
                                                 PropertyName="Title"
                                                 IsReadOnly="True"
@@ -31,7 +31,7 @@
                                                     HeaderText="{loc:StringResource Key='Password'}" 
                                                     PlaceholderText="{loc:StringResource Key='Password'}" />
 
-                    <TextBlock Text="Notes"
+                    <TextBlock Text="{loc:StringResource Key='Notes_Label'}"
                                IsTabStop="False"
                                Margin="10,10,0,0"/>
                     <TextBox Margin="10,10,15,10"
@@ -40,7 +40,7 @@
                              TextWrapping="Wrap"
                              AcceptsReturn="True"
                              Text="{Binding Path=Notes, Mode=TwoWay}"
-                             PlaceholderText="Any notes like secret questions, references, etc." />
+                             PlaceholderText="{loc:StringResource Key='Notes_Placeholder'}" />
                 </StackPanel>
             </StackPanel>
 
