--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/EditPasswordView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/EditPasswordView.xaml
@@ -45,7 +45,7 @@
                                                     HeaderText="{loc:StringResource Key='Password'}" 
                                                     PlaceholderText="{loc:StringResource Key='Password'}" />
 
-                    <TextBlock Text="Notes"
+                    <TextBlock Text="{loc:StringResource Key='Notes_Label'}"
                                IsTabStop="False"
                                Margin="10,10,0,0"/>
                     <TextBox Margin="10,10,35,10"
@@ -53,7 +53,7 @@
                              TextWrapping="Wrap"
                              AcceptsReturn="True"
                              Text="{Binding Path=Notes, Mode=TwoWay}"
-                             PlaceholderText="Any notes like secret questions, references, etc." />
+                             PlaceholderText="{loc:StringResource Key='Notes_Placeholder'}" />
 
                     <StackPanel Margin="10" 
                                 Orientation="Horizontal"
