--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Dialogs/Views/PasswordDetailsDialog.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Dialogs/Views/PasswordDetailsDialog.xaml
@@ -1,10 +1,11 @@
-<Page
+<views:DialogPage
     x:Class="Pango.Desktop.Uwp.Dialogs.Views.PasswordDetailsDialog"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:controls="using:Pango.Desktop.Uwp.Controls"
+    xmlns:views="using:Pango.Desktop.Uwp.Dialogs.Views"
     xmlns:loc="using:Pango.Desktop.Uwp.Core.Localization"
     xmlns:dialogviewmodels="using:Pango.Desktop.Uwp.Dialogs.ViewModels"
     d:DataContext="{d:DesignInstance Type=dialogviewmodels:PasswordDetailsDialogViewModel}"
@@ -46,4 +47,4 @@
 
         </ScrollViewer>
     </Grid>
-</Page>
+</views:DialogPage>
