feat: add placeholders for the password change popup

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Dialogs/Views/ChangePasswordDialog.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Dialogs/Views/ChangePasswordDialog.xaml
@@ -17,16 +17,19 @@
         <controls:ValidationPasswordBox Margin="0,0,-10,0" 
                                         HeaderText="{loc:StringResource Key='CurrentPassword_Label'}" 
                                         Password="{Binding Path=CurrentPassword, Mode=TwoWay}"
+                                        PlaceholderText="{loc:StringResource Key='CurrentPassword_Label'}" 
                                         PropertyName="CurrentPassword"
                                         HideCopyButton="True"/>
         <controls:ValidationPasswordBox Margin="0,0,-10,0" 
                                         HeaderText="{loc:StringResource Key='NewPassword_Label'}" 
                                         Password="{Binding Path=NewPassword, Mode=TwoWay}"
+                                        PlaceholderText="{loc:StringResource Key='Password'}" 
                                         PropertyName="NewPassword"
                                         HideCopyButton="True"/>
         <controls:ValidationPasswordBox Margin="0,0,-10,0" 
                                         HeaderText="{loc:StringResource Key='Confirmation_Label'}"
                                         Password="{Binding Path=Confirmation, Mode=TwoWay}"
+                                        PlaceholderText="{loc:StringResource Key='PasswordConfirmation'}" 
                                         PropertyName="Confirmation" 
                                         HideCopyButton="True"/>
     </StackPanel>
