Add validate passwords in tree method

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
@@ -200,6 +200,8 @@
 
         <DataTemplate x:Name="FolderTemplate">
             <TreeViewItem AutomationProperties.Name="{Binding Name}"
+                          DropCompleted="TreeViewItem_DropCompleted"
+                          DragStarting="TreeViewItem_DragStarting"
                           ItemsSource="{Binding Children}" IsExpanded="False" Visibility="{Binding IsVisible, Converter={StaticResource BoolToVisibilityConvereter}}">
                 <TreeViewItem.ContextFlyout>
                     <MenuFlyout>
