--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
@@ -228,7 +228,8 @@
                           DoubleTapped="Password_DoubleTapped"
                           HorizontalContentAlignment="Stretch"
                           AutomationProperties.Name="{Binding Name}"
-                          Visibility="{Binding IsVisible, Converter={StaticResource BoolToVisibilityConvereter}}">
+                          Visibility="{Binding IsVisible, Converter={StaticResource BoolToVisibilityConvereter}}"
+                          ItemsSource="{Binding Children}" IsExpanded="False">
                 
                 <TreeViewItem.ContextFlyout>
                     <MenuFlyout >
