feat(export&import): add a view for export and import of data
refs: #38

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/MainAppView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/MainAppView.xaml
@@ -42,6 +42,11 @@
                                          Icon="Contact" 
                                          IsTabStop="False"
                                          ToolTipService.ToolTip="{loc:StringResource Key=UserInfo}"/>
+                <muxc:NavigationViewItem x:Name="ExportImportItem"
+                                         Content="{loc:StringResource Key=ExportAndImport}"
+                                         Icon="SaveLocal" 
+                                         IsTabStop="False"
+                                         ToolTipService.ToolTip="{loc:StringResource Key=ExportAndImportTooltip}"/>
             </muxc:NavigationView.MenuItems>
             
             <muxc:NavigationView.Content>
