feat: implement merging imported folders; add missing localized strings
refs: #38

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Dialogs/Views/ImportDialog.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Dialogs/Views/ImportDialog.xaml
@@ -18,6 +18,8 @@
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
 
+            <TextBlock Text="{loc:StringResource Key='ImportMasterKey_Label'}"/>
+
             <controls:ValidationPasswordBox Grid.Row="1"
                         Margin="10"
                         PropertyName="MasterPassword"
