--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Dialogs/Views/ExportCompletedDialog.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Dialogs/Views/ExportCompletedDialog.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:loc="using:Pango.Desktop.Uwp.Core.Localization"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:dialogviewmodels="using:Pango.Desktop.Uwp.Dialogs.ViewModels"
     xmlns:views="using:Pango.Desktop.Uwp.Dialogs.Views"
@@ -17,7 +18,7 @@
         </Grid.RowDefinitions>
 
         <StackPanel Orientation="Vertical">
-            <TextBlock Text="Generated Package"
+            <TextBlock Text="{loc:StringResource Key='GeneratedPackage_Label'}"
                        Style="{StaticResource SubtitleTextBlockStyle}"/>
 
             <Grid>
@@ -31,21 +32,22 @@
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
 
-                <TextBlock Text="File:" 
-                           Margin="2"
+                <TextBlock Margin="2"
                            VerticalAlignment="Center"
-                           Style="{StaticResource BodyStrongTextBlockStyle}"/>
+                           Style="{StaticResource BodyStrongTextBlockStyle}">
+                    <Run Text="{loc:StringResource Key='File'}"/> <Run Text=":"/>
+                </TextBlock>
                 <TextBlock Grid.Column="1" 
                            Margin="2"
                            VerticalAlignment="Center"
                            Text="{Binding FileName}"/>
 
-
                 <TextBlock Grid.Row="1" 
-                           Text="Folder:"
                            Margin="2"
                            VerticalAlignment="Center"
-                           Style="{StaticResource BodyStrongTextBlockStyle}"/>
+                           Style="{StaticResource BodyStrongTextBlockStyle}">
+                    <Run Text="{loc:StringResource Key='Folder'}"/><Run Text=":"/>
+                </TextBlock>
                 <HyperlinkButton Grid.Row="1"
                                  Margin="2"
                                  Grid.Column="1"
@@ -58,7 +60,7 @@
 
         <StackPanel Grid.Row="1" 
                     Orientation="Vertical">
-            <TextBlock Text="Package Details"
+            <TextBlock Text="{loc:StringResource Key='PackageDetails_Label'}"
                        Style="{StaticResource SubtitleTextBlockStyle}"/>
 
             <Grid>
@@ -73,16 +75,18 @@
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
 
-                <TextBlock Text="Content:" 
-                           Margin="2"
-                           Style="{StaticResource BodyStrongTextBlockStyle}"/>
+                <TextBlock Margin="2"
+                           Style="{StaticResource BodyStrongTextBlockStyle}">
+                    <Run Text="{loc:StringResource Key='Content'}"/><Run Text=":"/>
+                </TextBlock>
                 <TextBlock Grid.Column="1" 
                            Text="{Binding ContentsInfo}"/>
 
                 <TextBlock Grid.Row="1" 
                            Margin="2"
-                           Text="Version:"
-                           Style="{StaticResource BodyStrongTextBlockStyle}"/>
+                           Style="{StaticResource BodyStrongTextBlockStyle}">
+                    <Run Text="{loc:StringResource Key='Version'}"/><Run Text=":"/>
+                </TextBlock>
                 <TextBlock Grid.Column="1" 
                            Margin="2"
                            Grid.Row="1"
@@ -90,8 +94,9 @@
 
                 <TextBlock Grid.Row="2" 
                            Margin="2"
-                           Text="Timestamp:"
-                           Style="{StaticResource BodyStrongTextBlockStyle}"/>
+                           Style="{StaticResource BodyStrongTextBlockStyle}">
+                    <Run Text="{loc:StringResource Key='GeneratingTimestamp_Label'}"/> <Run Text=":"/>
+                </TextBlock>
                 <TextBlock Grid.Column="1" 
                            Margin="2"
                            Grid.Row="2"
