feat: saves dragged and dropped passwords
Refs: #41

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
@@ -200,8 +200,6 @@
 
         <DataTemplate x:Name="FolderTemplate">
             <TreeViewItem AutomationProperties.Name="{Binding Name}"
-                          DropCompleted="TreeViewItem_DropCompleted"
-                          DragStarting="TreeViewItem_DragStarting"
                           ItemsSource="{Binding Children}" IsExpanded="False" Visibility="{Binding IsVisible, Converter={StaticResource BoolToVisibilityConvereter}}">
                 <TreeViewItem.ContextFlyout>
                     <MenuFlyout>
@@ -371,6 +369,8 @@
                               Margin="10"
                               Visibility="{Binding Path=ShowInitialScreen, Converter={StaticResource BoolToVisibilityConvereter}, ConverterParameter=reverse, FallbackValue=Collapsed}">
                             <TreeView x:Name="PasswordsTreeView" 
+                                      DragItemsStarting="PasswordsTreeView_DragItemsStarting"
+                                      DragItemsCompleted="PasswordsTreeView_DragItemsCompleted"
                                       ItemsSource="{Binding Path=Passwords}"                                      
                                       ItemContainerStyle="{StaticResource MUX_TreeViewItemStyle}"
                                       ItemTemplateSelector="{StaticResource PasswordExplorerItemTemplateSelector}"
